@@ -11,6 +11,8 @@ class Endpoint {
 
     private bool $restricted;
         public function getRestricted(): bool { return $this->restricted; }
+    private bool $unauthorizedExclusive = false;
+        public function getUnauthorizedExclusive(): bool { return $this->unauthorizedExclusive; }
     private string $complexPath;
         public function getComplexPath(): string { return $this->complexPath; }
     private string $file;
@@ -31,11 +33,12 @@ class Endpoint {
      * @param string $method The HTTP method to use for the endpoint.
      * @param string $path The path of the endpoint, relative to /api/.
      * @param string $fileName The filename of the endpoint, relative to the /src/api/ directory.
+     * @param bool $unauthorizedExclusive Whether the endpoint should be exclusive to unauthorized users.
      *
      * @return Endpoint The created Endpoint instance.
      */
-    public static function api(bool $restricted, string $method, string $path, string $fileName): Endpoint {
-        return new Endpoint($restricted, $method, "/api/".$path, $fileName);
+    public static function api(bool $restricted, string $method, string $path, string $fileName, bool $unauthorizedExclusive = false): Endpoint {
+        return new Endpoint($restricted, $method, "/api/".$path, $fileName, $unauthorizedExclusive);
     }
 
     /**
@@ -45,18 +48,20 @@ class Endpoint {
      * @param string $path The path of the endpoint, relative to the website root.
      * @param string $fileName The filename of the endpoint, relative to the /src/views/ directory.
      * @param Template|null $template The template to use for the endpoint, or null to use the default template.
+     * @param bool $unauthorizedExclusive Whether the endpoint should be exclusive to unauthorized users.
      *
      * @return Endpoint The created Endpoint instance.
      */
-    public static function view(bool $restricted, string $path, string $fileName, ?Template $template = null): Endpoint {
-        return new Endpoint($restricted, "GET", $path, $fileName, $template);
+    public static function view(bool $restricted, string $path, string $fileName, ?Template $template = null, bool $unauthorizedExclusive = false): Endpoint {
+        return new Endpoint($restricted, "GET", $path, $fileName, $unauthorizedExclusive, $template);
     }
 
-    private function __construct(bool $restricted, string $method, string $path, string $fileName, ?Template $template = null) {
+    private function __construct(bool $restricted, string $method, string $path, string $fileName, bool $unauthorizedExclusive = false, ?Template $template = null) {
         $this->restricted = $restricted;
         $this->complexPath = "/".Bee::normalizePath($path)."#".$method;
         $this->file = Bee::normalizePath($fileName);
         $this->template = $template;
+        $this->unauthorizedExclusive = $unauthorizedExclusive;
     }
 
     #/ INIT
